:zap: z-index problem fixed between list and side menu

--- a/src/styles/autoMint.scss
+++ b/src/styles/autoMint.scss
@@ -12,6 +12,7 @@
   transform: translateY(-50%);
   cursor: default;
   overflow: hidden;
+  z-index: 10;
 
   .container__scroll {
     width: 100%;
