--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -1,5 +1,4 @@
 .list__container {
-  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
